--- a/phase2/public/src/courses/view/courses.html
+++ b/phase2/public/src/courses/view/courses.html
@@ -24,7 +24,28 @@
           </md-list>
       </md-content>
       <div flex="45" style="height: 100%;padding-bottom: 15px;">
-        <md-content flex layout-padding style="margin-top: 14px;margin-left: 10px;border: 1px solid palegreen;overflow-x: hidden; margin-right: 10px;" layout = "column">
+        <div class="wrap">
+          <div class="box box1 shadow1">
+            <h4 style="font-weight:bold;" flex class="text-center">{{selectedCourse.code}}</h4>
+            <div class="row">
+              <div class="row">
+                <div class="col-md-6 col-md-push-3 col-xs-12">
+                  <img style="width:90px; height:100px; display:block; margin:auto;" ng-src="http://www.elgenero.com/images/anuel.jpg"/>
+                </div>
+              </div>
+              <div type="button" class="row">
+                  <p class="text-center col-lg-6 col-xs-12">Nelson Triple A</p>
+                  <p class="text-center col-lg-6 col-xs-12">Rating: 5/5</p>
+              </div>
+              <div class="row" style="padding:25px; margin-top:5%;">
+                <button style="margin:3px;" class="btn btn-primary text-center col-md-5 col-md-push-1 col-xs-12"> Teach Me!</button>
+                <button style="margin:3px;" class="btn btn-warning text-center col-md-5 col-md-push-1 col-xs-12"> Send Gift<i style="margin-left:15%;" class="fa fa-gift"></i></button>
+              </div>
+              <!-- <md-divider></md-divider> -->
+            </div>
+          </div>
+        </div>
+        <!-- <md-content flex layout-padding style="margin-top: 14px;margin-left: 10px;border: 1px solid #FF8A65;overflow-x: hidden; margin-right: 10px;" layout = "column">
           <h4 style="font-weight:bold;" flex class="text-center">{{selectedCourse.code}}</h4>
           <md-subheader flex class="md-no-sticky">Tutors available</md-subheader>
           <div class="row">
@@ -36,9 +57,6 @@
             <div type="button" class="row">
                 <p class="text-center col-lg-6 col-xs-12">Nelson Triple A</p>
                 <p class="text-center col-lg-6 col-xs-12">Rating: 5/5</p>
-                <!-- <md-button flex="15" class="md-primary md-raised text-center"> Teach Me!</md-button>
-                <md-button flex="10" class="md-warn md-raised text-center"> Rate<i style="margin-left:15%;" class="fa fa-star"></i></md-button> -->
-                <!-- <md-divider></md-divider> -->
             </div>
             <div class="row" style="padding:25px;">
               <button style="margin:3px;" class="btn btn-primary text-center col-md-5 col-md-push-1 col-xs-12"> Teach Me!</button>
@@ -46,7 +64,7 @@
             </div>
             <md-divider></md-divider>
           </div>
-        </md-content>
+        </md-content> -->
       </div>
     </md-content>
 </div>
