--- a/phase2/public/src/courses/view/courses.html
+++ b/phase2/public/src/courses/view/courses.html
@@ -2,7 +2,6 @@
   <md-content style="overflow-x:hidden;" flex="80" flex-offset="10">
       <h1>My Courses</h1>
       <md-divider></md-divider>
-
       <md-content class="md-padding" layout-xs="column" layout="row">
         <div flex-xs flex-gt-xs="50" layout="column">
           <md-card md-theme="default" ng-repeat="course in courseList" ng-if="$index%2==0">
@@ -12,10 +11,13 @@
               </span>
             </md-card-title>
             <md-card-title>
-              <span ng-if="course.tutors[0].first" class="md-subhead">Available Tutors:</span>
+              <span flex="40" ng-if="course.tutors[0].first" class="md-subhead">Available Tutors:</span>
+              <!-- <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="previousTutors();" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-left fa-lg" ></span>
+              <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="nextTutors()" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-right fa-lg" ></span> -->
+              <dir-pagination-controls style="text-align:center;" flex="60" ng-if="course.tutors[0].first" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls>
               <span ng-if="!course.tutors[0].first" class="md-subhead">We are sorry</span>
             </md-card-title>
-            <md-card-content md-scroll-y style="height: 150px; overflow-x:hidden; overflow-y:scroll;">
+            <md-card-content md-scroll-y style="height: 150px; overflow-x:hidden;">
             <md-list ng-if="!course.tutors[0].first">
               <md-list-item>
                 <!-- <img ng-src="{{tutor.image}}" class="md-avatar" /> -->
@@ -25,7 +27,7 @@
                 <md-divider ></md-divider>
               </md-list-item>
             </md-list>
-              <md-list ng-repeat="tutor in course.tutors">
+              <div dir-paginate="tutor in course.tutors| itemsPerPage: pageSize" current-page="currentPage">
                 <md-list-item>
                   <img ng-src="{{tutor.image}}" class="md-avatar" />
                   <!--<div class="md-list-item-text" layout="row">-->
@@ -35,7 +37,7 @@
                   <md-icon ng-click="" aria-label="Send Gift" style="position: absolute; right: 0;" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
                   <md-divider ></md-divider>
               </md-list-item>
-            </md-list>
+            </div>
           </md-card-content>
 
           <!-- <md-card-actions layout="row" layout-align="end center">
@@ -52,8 +54,11 @@
               <span class="md-subhead">{{course.name}}</span>
             </span>
           </md-card-title>
-          <md-card-title>
-            <span ng-if="course.tutors[0].first" class="md-subhead">Available Tutors:</span>
+          <md-card-title layout="row">
+            <span ng-if="course.tutors[0].first" flex="40" class="md-subhead">Available Tutors:</span>
+            <!-- <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="previousTutors();" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-left fa-lg" ></span>
+            <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="nextTutors()" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-right fa-lg" ></span> -->
+            <!-- <dir-pagination-controls style="text-align:center;" flex="60" ng-if="course.tutors[0].first" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls> -->
             <span ng-if="!course.tutors[0].first" class="md-subhead">We are sorry</span>
           </md-card-title>
           <md-card-content md-scroll-y style="height: 150px; overflow-x: hidden; overflow-y:scroll;">
@@ -66,11 +71,11 @@
                 <md-divider ></md-divider>
               </md-list-item>
             </md-list>
-            <md-list ng-repeat="tutor in course.tutors">
+            <md-list ng-repeat="tut in course.tutors">
                 <md-list-item>
-                  <img ng-src="{{tutor.image}}" class="md-avatar" />
+                  <img ng-src="{{tut.image}}" class="md-avatar" />
                   <!--<div class="md-list-item-text" layout="row">-->
-                      <p>{{tutor.first}} {{tutor.last}}</p>
+                      <p>{{tut.first}} {{tut.last}}</p>
                   <!-- </div> -->
                   <md-icon ng-click="" aria-label="Send Message" style="position: absolute; right: 0;" class="md-secondary md-hue-3 fa fa-comments fa-lg" ></md-icon>
                   <md-icon ng-click="" aria-label="Send Gift" style="position: absolute; right: 0;" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
@@ -78,6 +83,7 @@
                 </md-list-item>
               </md-list>
             </md-card-content>
+
 
             <!-- <md-card-actions layout="row" layout-align="end center">
               <md-button>Message</md-button>
