--- a/phase2/public/src/home/view/home.html
+++ b/phase2/public/src/home/view/home.html
@@ -72,7 +72,7 @@
 </script>
 <md-content layout="row">
     <md-card ng-controller="groupController as group" flex="40" flex-offset="10" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
-        <md-card-title>
+        <md-card-title style="max-height:100px;">
             <md-card-title-text flex="60">
                 <span class="md-headline">My Groups</span>
             </md-card-title-text>
@@ -88,7 +88,7 @@
         </md-list>
     </md-card>
     <md-card ng-controller="coursesController as courses" flex="40" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
-        <md-card-title>
+        <md-card-title style="max-height:100px;">
             <md-card-title-text flex="60">
                 <span class="md-headline">My Courses</span>
             </md-card-title-text>
