--- a/phase2/public/src/home/view/home.html
+++ b/phase2/public/src/home/view/home.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top:5%;">
+<div ng-controller="homePageController" class="row" style="margin-top:5%;">
     <div class="col-xs-6 col-xs-push-3" id="clockdiv">
         <h2 style="margin-bottom:3%;color:rgb(33,150,243);">Countdown to {{countdown}}</h2>
         <div>
