--- a/phase2/public/src/tutors/view/tutors.html
+++ b/phase2/public/src/tutors/view/tutors.html
@@ -1,4 +1,4 @@
-<div ng-controller="tutorsController as tutors">
+<div>
   <md-content style="overflow-x:hidden;" flex="80" flex-offset="10">
       <h1>My Inbox</h1>
       <md-divider></md-divider>
@@ -28,10 +28,10 @@
 </md-content>
 </div>
 
-<div ng-controller="coursesController as courses">
+<div>
   <md-content style="overflow-x:hidden;" flex="80" flex-offset="10">
       <h1>My Courses
-        <md-button ng-controller="searchBarCtrl" ng-click="showAdvanced($event,tempCourses)" style="position: absolute; right: 0;" class="md-fab md-mini md-secondary" aria-label="New Group">
+        <md-button ng-click="showAdvanced($event,tempCourses)" style="position: absolute; right: 0;" class="md-fab md-mini md-secondary" aria-label="New Group">
             <md-icon class="fa fa-plus fa-lg" style="margin-top: 45%; color: white;"></md-icon>
         </md-button>
       </h1>
@@ -47,8 +47,8 @@
             </md-card-title>
             <md-card-content md-scroll-y style="height: 70px;">
               <div style="float: left">
-                  <md-switch ng-model="availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
-                      {{ availability }}
+                  <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
+                      {{ course.availability }}
                   </md-switch>
               </div>
               <md-card-actions layout="row" layout-align="end center">
