Tutor courses request really works

--- a/phase2/public/src/tutors/view/tutors.html
+++ b/phase2/public/src/tutors/view/tutors.html
@@ -48,7 +48,7 @@
             <md-card-content md-scroll-y style="height: 70px;">
               <div style="float: left">
                   <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
-                      {{ course.availability }}
+                      {{course.availability}}
                   </md-switch>
               </div>
               <md-card-actions layout="row" layout-align="end center">
@@ -67,8 +67,8 @@
           </md-card-title>
           <md-card-content md-scroll-y style="height: 70px; overflow: hidden;">
             <div style="float: left">
-                <md-switch ng-model="availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
-                    {{ availability }}
+                <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
+                    {{course.availability}}
                 </md-switch>
             </div>
             <md-card-actions layout="row" layout-align="end center">
