--- a/phase2/public/src/courses/view/courses.html
+++ b/phase2/public/src/courses/view/courses.html
@@ -14,7 +14,7 @@
               <span flex="40" ng-if="course.tutors[0].first" class="md-subhead">Available Tutors:</span>
               <!-- <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="previousTutors();" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-left fa-lg" ></span>
               <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="nextTutors()" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-right fa-lg" ></span> -->
-              <dir-pagination-controls style="text-align: right; margin-top: -5%;" flex="60" ng-if="course.tutors[0].first" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls>
+              <dir-pagination-controls style="text-align: right; margin-top: -5%;" flex="60" ng-if="course.tutors[0].first" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html" pagination-id="course.code"></dir-pagination-controls>
               <span ng-if="!course.tutors[0].first" class="md-subhead">We are sorry</span>
             </md-card-title>
             <md-card-content md-scroll-y style="height: 150px; overflow-x:hidden;">
@@ -27,7 +27,7 @@
                 <md-divider ></md-divider>
               </md-list-item>
             </md-list>
-              <div dir-paginate="tutor in course.tutors| itemsPerPage: pageSize" current-page="currentPage">
+              <div dir-paginate="tutor in course.tutors| itemsPerPage: pageSize" current-page="currentPage" pagination-id="course.code">
                 <md-list-item>
                   <img ng-src="{{tutor.image}}" class="md-avatar" />
                   <!--<div class="md-list-item-text" layout="row">-->
@@ -58,10 +58,10 @@
             <span ng-if="course.tutors[0].first" flex="40" class="md-subhead">Available Tutors:</span>
             <!-- <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="previousTutors();" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-left fa-lg" ></span>
             <span style="text-align:center; color:#2D5F99; font-size:25px;" flex="20" ng-click="nextTutors()" aria-label="Send Message" class="md-secondary md-hue-3 fa fa-arrow-circle-right fa-lg" ></span> -->
-            <!-- <dir-pagination-controls style="text-align:center;" flex="60" ng-if="course.tutors[0].first" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls> -->
+            <dir-pagination-controls style="text-align: right; margin-top: -5%;" flex="60" ng-if="course.tutors[0].first" boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html" pagination-id="course.code"></dir-pagination-controls>
             <span ng-if="!course.tutors[0].first" class="md-subhead">We are sorry</span>
           </md-card-title>
-          <md-card-content md-scroll-y style="height: 150px; overflow-x: hidden; overflow-y:scroll;">
+          <md-card-content md-scroll-y style="height: 150px; overflow-x: hidden;">
             <md-list ng-if="!course.tutors[0].first">
               <md-list-item>
                 <!-- <img ng-src="{{tutor.image}}" class="md-avatar" /> -->
@@ -71,18 +71,18 @@
                 <md-divider ></md-divider>
               </md-list-item>
             </md-list>
-            <md-list ng-repeat="tut in course.tutors">
+            <div dir-paginate="tutor in course.tutors| itemsPerPage: pageSize" current-page="currentPage" pagination-id="course.code">
                 <md-list-item>
-                  <img ng-src="{{tut.image}}" class="md-avatar" />
+                  <img ng-src="{{tutor.image}}" class="md-avatar" />
                   <!--<div class="md-list-item-text" layout="row">-->
-                      <p>{{tut.first}} {{tut.last}}</p>
+                      <p>{{tutor.first}} {{tutor.last}}</p>
                   <!-- </div> -->
                   <md-icon ng-click="" aria-label="Send Message" style="position: absolute; right: 0;" class="md-secondary md-hue-3 fa fa-comments fa-lg" ></md-icon>
                   <md-icon ng-click="" aria-label="Send Gift" style="position: absolute; right: 0;" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
                   <md-divider ></md-divider>
                 </md-list-item>
-              </md-list>
-            </md-card-content>
+            </div>
+          </md-card-content>
 
 
             <!-- <md-card-actions layout="row" layout-align="end center">
