--- a/phase2/public/src/home/view/home.html
+++ b/phase2/public/src/home/view/home.html
@@ -1,21 +1,23 @@
 <div class="row" style="margin-top:5%;">
-    <div class="col-xs-6 col-xs-push-3" id="clockdiv">
+    <div class="col-xs-10 col-xs-push-1" id="clockdiv">
         <h2 style="margin-bottom:3%;color:rgb(33,150,243);">Countdown to {{countdown}}</h2>
-        <div>
-            <span class="days"><div id="day"></div></span>
-            <div class="smalltext">Days</div>
-        </div>
-        <div>
-            <span class="hours"><div id="hour"></div></span>
-            <div class="smalltext">Hours</div>
-        </div>
-        <div>
-            <span class="minutes"><div id="min"></div></span>
-            <div class="smalltext">Minutes</div>
-        </div>
-        <div>
-            <span class="seconds"><div id="sec"></div></span>
-            <div class="smalltext">Seconds</div>
+        <div class="row">
+          <div class="col-xs-3">
+              <span class="days"><div id="day"></div></span>
+              <div class="smalltext">Days</div>
+          </div>
+          <div class="col-xs-3">
+              <span class="hours"><div id="hour"></div></span>
+              <div class="smalltext">Hours</div>
+          </div>
+          <div class="col-xs-3">
+              <span class="minutes"><div id="min"></div></span>
+              <div class="smalltext">Minutes</div>
+          </div>
+          <div class="col-xs-3">
+              <span class="seconds"><div id="sec"></div></span>
+              <div class="smalltext">Seconds</div>
+          </div>
         </div>
     </div>
     <div ng-if="!showCalendar&&!showName" ng-click="setCalendar()" style="margin-top:8%;margin-left:-16%" class="col-lg-4 col-lg-push-2 col-xs-4 col-xs-push-3">
@@ -73,10 +75,9 @@
 <md-content layout="row">
     <md-card ng-controller="groupController as group" flex="40" flex-offset="10" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
         <md-card-title style="max-height:100px;">
-            <md-card-title-text flex="60">
+            <md-card-title-text ng-click="route('/groups')" flex>
                 <span class="md-headline">My Groups</span>
             </md-card-title-text>
-            <md-button flex="40" ng-click="route('/groups')" class="btn btn-default">See All</md-button>
         </md-card-title>
         <md-list ng-repeat="groups in myGroupsList" ng-if="$index<3">
             <md-list-item class="md-1-line">
@@ -89,10 +90,9 @@
     </md-card>
     <md-card ng-controller="coursesController as courses" flex="40" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
         <md-card-title style="max-height:100px;">
-            <md-card-title-text flex="60">
+            <md-card-title-text ng-click="route('/groups')" flex>
                 <span class="md-headline">My Courses</span>
             </md-card-title-text>
-            <md-button flex="40" ng-click="route('/courses')" class="btn btn-default">See All</md-button>
         </md-card-title>
         <md-list ng-repeat="course in courseList" ng-if="$index<3">
             <md-list-item class="md-1-line">
