--- a/phase2/public/src/home/view/home.html
+++ b/phase2/public/src/home/view/home.html
@@ -90,7 +90,7 @@
     </md-card>
     <md-card ng-controller="coursesController as courses" flex="40" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
         <md-card-title style="max-height:100px;">
-            <md-card-title-text ng-click="route('/groups')" flex>
+            <md-card-title-text ng-click="route('/courses')" flex>
                 <span class="md-headline">My Courses</span>
             </md-card-title-text>
         </md-card-title>
