--- a/phase2/public/src/tutors/view/tutors.html
+++ b/phase2/public/src/tutors/view/tutors.html
@@ -51,15 +51,16 @@
                 <span class="md-subhead">{{course.name}}</span>
               </span>
             </md-card-title>
-            <md-card-content md-scroll-y style="height: 70px;">
-              <div style="float: left">
-                  <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
+            <md-card-content class="row" md-scroll-y style="height: 70px;">
+              <div class="col-xs-8" >
+                  <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" style ="font-size:130%;" >
                       {{course.availability}}
                   </md-switch>
               </div>
-              <md-card-actions layout="row" layout-align="end center">
-                <md-button>Remove</md-button>
-              </md-card-actions>
+              <div class="col-xs-4">
+                <i style="font-size: 25px;color: rgb(255,82,82);line-height: 50px;" class="fa fa-trash pull-right"></i>
+              </div>
+
           </md-card-content>
         </md-card>
       </div>
@@ -71,16 +72,17 @@
               <span class="md-subhead">{{course.name}}</span>
             </span>
           </md-card-title>
-          <md-card-content md-scroll-y style="height: 70px; overflow: hidden;">
-            <div style="float: left">
-                <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" aria-label="Available" style ="font-size:175%;" >
+          <md-card-content class="row" md-scroll-y style="height: 70px;">
+            <div class="col-xs-8" >
+                <md-switch ng-model="course.availability" ng-true-value="'Available'" ng-false-value="'Unavailable'" style ="font-size:130%;" >
                     {{course.availability}}
                 </md-switch>
             </div>
-            <md-card-actions layout="row" layout-align="end center">
-              <md-button>Remove</md-button>
-            </md-card-actions>
-          </md-card-content>
+            <div class="col-xs-4">
+              <i style="font-size: 25px;color: rgb(255,82,82);line-height: 50px;" class="fa fa-trash pull-right"></i>
+            </div>
+
+        </md-card-content>
 
         </div>
       </md-content>
