--- a/phase2/public/src/home/view/home.html
+++ b/phase2/public/src/home/view/home.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top:5%;">
+<div ng-controller="UserController" class="row" style="margin-top:5%;">
     <div class="col-xs-10 col-xs-push-1" id="clockdiv">
         <h2 style="margin-bottom:3%;color:rgb(33,150,243);">Countdown to {{countdown}}</h2>
         <div class="row">
@@ -74,7 +74,7 @@
 </script>
 <md-content layout="row">
     <md-card ng-controller="groupController as group" flex="40" flex-offset="10" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
-        <md-card-title style="max-height:100px;">
+        <md-card-title style="max-height:100px; background-color: #00BF96">
             <md-card-title-text ng-click="route('/groups')" flex>
                 <span class="md-headline">My Groups</span>
             </md-card-title-text>
@@ -89,7 +89,7 @@
         </md-list>
     </md-card>
     <md-card ng-controller="coursesController as courses" flex="40" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
-        <md-card-title style="max-height:100px;">
+        <md-card-title style="max-height:100px; background-color: #00BF96">
             <md-card-title-text ng-click="route('/courses')" flex>
                 <span class="md-headline">My Courses</span>
             </md-card-title-text>
