--- a/phase2/public/src/courses/view/courses.html
+++ b/phase2/public/src/courses/view/courses.html
@@ -33,8 +33,8 @@
                   <!--<div class="md-list-item-text" layout="row">-->
                   <p flex="40">{{tutor.first}} {{tutor.last}}</p>
                   <!-- </div> -->
-                  <md-icon flex="20" ng-click="" class="md-secondary md-hue-3 fa fa-comments fa-lg" ></md-icon>
-                  <md-icon flex="20" ng-click="" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
+                  <md-icon flex="20" ng-click="message()" class="md-secondary md-hue-3 fa fa-comments fa-lg" ></md-icon>
+                  <md-icon flex="20" ng-click="donate()" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
                   <md-divider ></md-divider>
               </md-list-item>
             </div>
@@ -77,8 +77,8 @@
                   <!--<div class="md-list-item-text" layout="row">-->
                   <p flex="40">{{tutor.first}} {{tutor.last}}</p>
                   <!-- </div> -->
-                  <md-icon flex="20" ng-click="" class="md-secondary md-hue-3 fa fa-comments fa-lg" ></md-icon>
-                  <md-icon flex="20" ng-click="" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
+                  <md-icon flex="20" ng-click="message()" class="md-secondary md-hue-3 fa fa-comments fa-lg" ></md-icon>
+                  <md-icon flex="20" ng-click="donate()" class="md-secondary md-hue-3 fa fa-gift fa-lg" ></md-icon>
                   <md-divider ></md-divider>
                 </md-list-item>
             </div>
