--- a/phase2/public/src/groups/view/groups.html
+++ b/phase2/public/src/groups/view/groups.html
@@ -30,8 +30,8 @@
           </md-card-content>
 
           <md-card-actions layout="row" layout-align="end center">
-            <md-button>Message</md-button>
-            <md-button>Leave</md-button>
+            <md-button ng-click="message()">Message</md-button>
+            <md-button ng-click="exit()">Leave</md-button>
           </md-card-actions>
         </md-card>
       </div>
@@ -58,8 +58,8 @@
             </md-card-content>
 
             <md-card-actions layout="row" layout-align="end center">
-              <md-button>Message</md-button>
-              <md-button>Leave</md-button>
+              <md-button ng-click="message()">Message</md-button>
+              <md-button ng-click="exit()">Leave</md-button>
             </md-card-actions>
           </md-card>
         </div>
