--- a/phase2/public/src/tutors/view/tutors.html
+++ b/phase2/public/src/tutors/view/tutors.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="tutorsController">
   <md-content style="overflow-x:hidden;" flex="80" flex-offset="10" layout="column">
     <md-content layout="row">
       <h1 flex="40">My Inbox</h1>
@@ -19,7 +19,7 @@
                <h4>{{ message.title }}</h4>
                <p>{{ message.body }}</p>
              </div>
-             <md-button class="md-secondary">Respond</md-button>
+             <md-button ng-click="message()" class="md-secondary">Respond</md-button>
            </div>
          </md-list-item>
          <md-divider></md-divider>
@@ -58,7 +58,7 @@
                   </md-switch>
               </div>
               <div class="col-xs-4">
-                <i style="font-size: 25px;color: rgb(255,82,82);line-height: 50px;" class="fa fa-trash pull-right"></i>
+                <md-icon ng-click="exit()" style="font-size: 25px;color: rgb(255,82,82);line-height: 50px;" class="fa fa-trash pull-right"></md-icon>
               </div>
 
           </md-card-content>
