--- a/phase2/public/src/tutors/view/tutors.html
+++ b/phase2/public/src/tutors/view/tutors.html
@@ -19,7 +19,7 @@
                <h4>{{ message.title }}</h4>
                <p>{{ message.body }}</p>
              </div>
-             <md-button ng-click="message()" class="md-secondary">Respond</md-button>
+             <md-button ng-click="replyMessage()" class="md-secondary">Respond</md-button>
            </div>
          </md-list-item>
          <md-divider></md-divider>
@@ -58,7 +58,7 @@
                   </md-switch>
               </div>
               <div class="col-xs-4">
-                <md-icon ng-click="exit()" style="font-size: 25px;color: rgb(255,82,82);line-height: 50px;" class="fa fa-trash pull-right"></md-icon>
+                <i ng-click="exit()" style="font-size: 25px;color: rgb(255,82,82);line-height: 50px; cursor:pointer;" class="fa fa-trash pull-right"></i>
               </div>
 
           </md-card-content>
@@ -79,7 +79,7 @@
                 </md-switch>
             </div>
             <div class="col-xs-4">
-              <i style="font-size: 25px;color: rgb(255,82,82);line-height: 50px;" class="fa fa-trash pull-right"></i>
+              <i ng-click="exit()" style="font-size: 25px;color: rgb(255,82,82);line-height: 50px; cursor:pointer;" class="fa fa-trash pull-right"></i>
             </div>
 
         </md-card-content>
