tutor add course

--- a/phase2/public/src/tutors/view/tutors.html
+++ b/phase2/public/src/tutors/view/tutors.html
@@ -114,7 +114,7 @@
                     <md-button ng-click="answer('Cancel')">
                         Cancel
                     </md-button>
-                    <md-button ng-click="answer('Done'); saveCourses();">
+                    <md-button ng-click="answer('useful'); saveCourses();">
                         Submit
                     </md-button>
                 </md-dialog-actions>
