--- a/phase2/public/src/home/view/home.html
+++ b/phase2/public/src/home/view/home.html
@@ -1,43 +1,45 @@
-<div class="row" style="margin-top:5%;">
-    <div class="col-xs-6 col-xs-push-3" id="clockdiv">
+<div ng-controller="UserController" class="row" style="margin-top:5%;">
+    <div class="col-xs-10 col-xs-push-1" id="clockdiv">
         <h2 style="margin-bottom:3%;color:rgb(33,150,243);">Countdown to {{countdown}}</h2>
-        <div>
-            <span class="days"><div id="day"></div></span>
-            <div class="smalltext">Days</div>
-        </div>
-        <div>
-            <span class="hours"><div id="hour"></div></span>
-            <div class="smalltext">Hours</div>
-        </div>
-        <div>
-            <span class="minutes"><div id="min"></div></span>
-            <div class="smalltext">Minutes</div>
-        </div>
-        <div>
-            <span class="seconds"><div id="sec"></div></span>
-            <div class="smalltext">Seconds</div>
+        <div class="row">
+          <div class="col-xs-3">
+              <span class="days"><div id="day"></div></span>
+              <div class="smalltext">Days</div>
+          </div>
+          <div class="col-xs-3">
+              <span class="hours"><div id="hour"></div></span>
+              <div class="smalltext">Hours</div>
+          </div>
+          <div class="col-xs-3">
+              <span class="minutes"><div id="min"></div></span>
+              <div class="smalltext">Minutes</div>
+          </div>
+          <div class="col-xs-3">
+              <span class="seconds"><div id="sec"></div></span>
+              <div class="smalltext">Seconds</div>
+          </div>
         </div>
     </div>
-    <div ng-if="!showCalendar&&!showName" ng-click="setCalendar()" style="margin-top:8%;margin-left:-16%" class="col-lg-4 col-lg-push-2 col-xs-4 col-xs-push-3">
-        <i style="font-size: 3em;" class="fa fa-circle-thin fa-stack-2x"></i>
-        <i style="line-height: 38px;font-size: 1.5em;" class="fa fa-pencil fa-stack-1x"></i>
+    <div ng-if="!showCalendar&&!showName" ng-click="setCalendar()" style="margin-top: 50px;"; class="">
+        <i style="font-size: 3em;" class="fa fa-circle-thin fa-stack-2x col-md-push-2 col-xs-push-5"></i>
+        <i style="line-height: 38px;font-size: 1.5em;" class="fa fa-pencil fa-stack-1x col-md-push-2 col-xs-push-5"></i>
     </div>
-    <div ng-if="showCalendar" class="col-xs-4 col-xs-push-2" style="margin-top:5%;">
+    <div ng-if="showCalendar" class="col-md-4 col-md-push-5 col-xs-4 col-xs-push-4" style="margin-top:5%;">
         <div flex-gt-xs>
             <h4>Select Countdown Date</h4>
             <md-datepicker ng-change="setDate(myDate)" ng-model="myDate" md-placeholder="Enter date"></md-datepicker>
         </div>
     </div>
-    <div ng-show="showName" class="col-xs-4 col-xs-push-2" style="margin-top:5%;">
+    <div ng-show="showName" class="col-md-4 col-md-push-5 col-xs-4 col-xs-push-4" style="margin-top:5%;">
         <div flex-gt-xs>
             <h4>Select Countdown Name</h4>
-            <md-input-container flex="40" class="md-icon-float md-block">
+            <md-input-container flex class="md-icon-float md-block">
                 <!-- Use floating label instead of placeholder -->
                 <label>Countdown Name</label>
                 <md-icon style="font-size:20px;" class="fa fa-calendar"></md-icon>
                 <input ng-model="countdown" type="text">
             </md-input-container>
-            <button ng-click="saveCountdown()" style="padding: 1%; margin-top: -7%;" class="col-xs-2 col-xs-push-3 btn btn-success">Done</button>
+            <button ng-click="saveCountdown()" style="padding: 1%; margin-top: -7%;" class="col-xs-4 col-xs-push-4 btn btn-success">Done</button>
         </div>
     </div>
 </div>
@@ -72,11 +74,10 @@
 </script>
 <md-content layout="row">
     <md-card ng-controller="groupController as group" flex="40" flex-offset="10" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
-        <md-card-title style="max-height:100px;">
-            <md-card-title-text flex="60">
+        <md-card-title style="max-height:100px; background-color: #00BF96">
+            <md-card-title-text ng-click="route('/groups')" flex>
                 <span class="md-headline">My Groups</span>
             </md-card-title-text>
-            <md-button flex="40" ng-click="route('/groups')" class="btn btn-default">See All</md-button>
         </md-card-title>
         <md-list ng-repeat="groups in myGroupsList" ng-if="$index<3">
             <md-list-item class="md-1-line">
@@ -88,11 +89,10 @@
         </md-list>
     </md-card>
     <md-card ng-controller="coursesController as courses" flex="40" style="margin-top:5%; margin-bottom:4%;" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
-        <md-card-title style="max-height:100px;">
-            <md-card-title-text flex="60">
+        <md-card-title style="max-height:100px; background-color: #00BF96">
+            <md-card-title-text ng-click="route('/courses')" flex>
                 <span class="md-headline">My Courses</span>
             </md-card-title-text>
-            <md-button flex="40" ng-click="route('/courses')" class="btn btn-default">See All</md-button>
         </md-card-title>
         <md-list ng-repeat="course in courseList" ng-if="$index<3">
             <md-list-item class="md-1-line">
